--- a/Pipfile
+++ b/Pipfile
@@ -6,8 +6,8 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-aiohttp = "*"
-aiodns = "*"
+pandas = "*"
+numpy = "*"
 
 [requires]
 python_version = "3.7"
